Java Bindings: Fixed race condition in lazy downcall patching